# Second-Mind

./: .gitignore  .impeccable.md  CLAUDE.md  DESIGN_SYSTEM.md  LOGS.md  nous-logs  supabase_capture_migration.sql  supabase_migration.sql  supabase_migration_v2.sql
.github/workflows/: ci.yml
NOUS 0/NOUS 0/: ContentView.swift  NOUS_0App.swift  NSPrivacyInfo.xcprivacy
NOUS 0/NOUS 0.xcodeproj/: project.pbxproj
NOUS 0/NOUS 0Tests/: AtomStoreBulkTests.swift  AtomStoreCaptureTests.swift  AtomStoreGroupingTests.swift  AtomStoreReducerTests.swift  AtomStoreTestSupport.swift  MarkdownInlineTests.swift  NoteEventTests.swift  RelatedFinderTests.swift  TagNormalizerTests.swift
NOUS 0/NOUS Widgets/: Info.plist  NOUS_Widgets.entitlements  NousWidget.swift  NousWidgetData.swift  WIDGET_SETUP.md
nous-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml
nous-backend/app/: __init__.py  config.py  deps.py  logging.py  main.py  sse.py
nous-backend/app/graphs/: compose.py  pushback.py  refine_meet.py  refine_web.py  suggest_links.py  synthesis.py
nous-backend/app/models/: atom.py  capture.py  links.py  search.py  synthesis.py
nous-backend/app/routers/: capture.py  compose.py  health.py  links.py  search.py  synthesis.py
nous-backend/app/services/: crawler.py  gemini.py  supabase.py
nous-backend/scripts/: deploy.sh  dev.sh  setup-gcp.sh
nous-backend/tests/: conftest.py  test_health.py  test_sse.py  test_synthesis_graph.py
nous-extension/: README.md  background.js  manifest.json
(+112 files in other folders)
