[project]
name = "nous-backend"
version = "0.1.0"
description = "NOUS cognitive backend — FastAPI + LangGraph for synthesis, pushback, and hybrid search."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "google-genai>=0.3.0",
    "langgraph>=0.2.50",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "sse-starlette>=2.1.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "python-multipart>=0.0.12",
    "crawl4ai>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.32.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
